# mbcisg

./: README.md
dat/: DN.tsv  preprocess_raw_dataset_file.py
exp/: index_size.sh  query.sh  search.sh  update.sh
src/: AUF.cpp  AUF.h  BBF.cpp  BBF.h  BBFQ.cpp  BBFQ.h  BbfNode.cpp  BbfNode.h  BcTreeQ.cpp  BcTreeQ.h  BlockCutTree.cpp  BlockCutTree.h  BlockCutTreeNode.cpp  BlockCutTreeNode.h  CMakeLists.txt  EdgeMap.cpp  EdgeMap.h  HopcroftTarjan.cpp  HopcroftTarjan.h  MXT.cpp  MXT.h  NodePool.cpp  NodePool.h  PVec.cpp  PVec.h  README.md  Timer.cpp  Timer.h  experiment_main.cpp  experiment_utils.cpp  experiment_utils.h  test_utils.cpp  test_utils.h  utils.cpp  utils.h
src/datasets/: toy_graph_edges.csv
src/holm_lichtenberg_fdbcc/: BCCInfo.cpp  BCCInfo.h  BasicTree.cpp  BasicTree.h  CMakeLists.txt  DisjointSet.cpp  DisjointSet.h  EdgeInfo.cpp  EdgeInfo.h  HopcroftTarjan.cpp  HopcroftTarjan.h  LevelInfo.cpp  LevelInfo.h  NeighbourPartition.cpp  NeighbourPartition.h  NotYetMergeSet.cpp  NotYetMergeSet.h  README.md  SimHolmBcc.cpp  SimHolmBcc.h  SimpleTree.cpp  SimpleTree.h  TestBCCInfo.cpp  TestBasicTree.cpp  TestEdgeInfo.cpp  TestLevelInfo.cpp  TestNeighbourPartition.cpp  TestNotYetMergeSet.cpp  TestTopTree.cpp  TreeNode.cpp  TreeNode.h  commons.cpp  commons.h  my_types.h  test_holm.cpp  test_utils.cpp  test_utils.h  top_tree.cpp  top_tree.h  tree.cpp  (+1 more)
src/holm_lichtenberg_fdbcc/graphs/: 500_clique_edges.csv  DD-Miner_miner-disease-disease.csv  ca-GrQc.csv
